fixes alignment

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -182,7 +182,7 @@ height: 100vh;
     padding: 10px 20px;
     font-size: 14px;
     margin-top: 220px;
-    margin-left: 100px;
+    margin-left: 110px;
   }
 }
   .slidingTexContainer {
